Bug 301476 - konsole-4.8.90 crashes when trying to d&d or detach a tab in which nano is running
Summary: konsole-4.8.90 crashes when trying to d&d or detach a tab in which nano is ru...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 304205 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-08 21:25 UTC by Andreas K. Huettel
Modified: 2012-07-28 20:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas K. Huettel 2012-06-08 21:25:06 UTC
Application: konsole (2.9)
KDE Platform Version: 4.8.90 (4.8.90) (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.3.1-gentoo x86_64
Distribution: "Gentoo Base System release 2.1"

-- Information about the crash:
- What I was doing when the application crashed:

drag the rightmost of the 4 open tabs somewhere between the others. release mouse button- crash.

-- Backtrace:
Application: Konsole (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  0x00007f62cf2ad3c8 in main_arena () from /lib64/libc.so.6
#7  0x00007f62d05f6459 in QMetaObject::cast (this=0x7f62d17e5a40, obj=0x7f62cf2ad3e8) at kernel/qmetaobject.cpp:274
#8  0x00007f62beaaa3f8 in Konsole::SessionController::updateWebSearchMenu (this=0xe5a210) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/SessionController.cpp:358
#9  0x00007f62beaad1a4 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/SessionController.moc:150
#10 Konsole::SessionController::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/SessionController.moc:139
#11 0x00007f62d0603e51 in QMetaObject::activate (sender=0xe6f730, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff520d1e80) at kernel/qobject.cpp:3547
#12 0x00007f62bea9fcd5 in Konsole::Session::selectionChanged (this=<optimized out>, _t1=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Session.moc:420
#13 0x00007f62beaa1c10 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Session.moc:181
#14 Konsole::Session::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Session.moc:160
#15 0x00007f62d0603e51 in QMetaObject::activate (sender=0xf8f4a0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff520d2030) at kernel/qobject.cpp:3547
#16 0x00007f62bea6b755 in Konsole::Emulation::selectionChanged (this=<optimized out>, _t1=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Emulation.moc:271
#17 0x00007f62bea6b784 in Konsole::Emulation::checkSelectedText (this=0xf8f4a0) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/Emulation.cpp:92
#18 0x00007f62bea6bae1 in Konsole::Emulation::setScreen (this=0xf8f4a0, index=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/Emulation.cpp:117
#19 0x00007f62bead28bd in Konsole::Vt102Emulation::processToken (this=0xf8f4a0, token=<optimized out>, p=0, q=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/Vt102Emulation.cpp:783
#20 0x00007f62bead3248 in Konsole::Vt102Emulation::receiveChar (this=0xf8f4a0, cc=108) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/Vt102Emulation.cpp:346
#21 0x00007f62bea6b2e3 in Konsole::Emulation::receiveData (this=0xf8f4a0, text=0x112c378 "\033[51;1H\033[?1049l\r\033[?1l\033>\033[?1049h\033[1;51r\033[?12l\033[?25h\033[39;49m\033(B\033[m\033[4l\033[?7h\033[H\033[2J\033(B\033[0;7m  GNU nano 2.3.1", ' ' <repeats 62 times>, "Datei: Makefile.am", ' ' <repeats 15 times>..., length=4095) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/Emulation.cpp:223
#22 0x00007f62beaa2007 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Session.moc:227
#23 Konsole::Session::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Session.moc:160
#24 0x00007f62d0603e51 in QMetaObject::activate (sender=0xed9fb0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff520d2340) at kernel/qobject.cpp:3547
#25 0x00007f62bea9608d in Konsole::Pty::receivedData (this=<optimized out>, _t1=0x112c378 "\033[51;1H\033[?1049l\r\033[?1l\033>\033[?1049h\033[1;51r\033[?12l\033[?25h\033[39;49m\033(B\033[m\033[4l\033[?7h\033[H\033[2J\033(B\033[0;7m  GNU nano 2.3.1", ' ' <repeats 62 times>, "Datei: Makefile.am", ' ' <repeats 15 times>..., _t2=4095) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90_build/src/Pty.moc:109
#26 0x00007f62bea960cb in Konsole::Pty::dataReceived (this=0xed9fb0) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/Pty.cpp:88
#27 0x00007f62d0603e51 in QMetaObject::activate (sender=0xfa3b40, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#28 0x00007f62be5f13e6 in KPtyDevicePrivate::_k_canRead (this=0xfaaa90) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90/kpty/kptydevice.cpp:335
#29 0x00007f62be5f1886 in qt_static_metacall (_a=<optimized out>, _o=<optimized out>, _c=<optimized out>, _id=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90_build/kpty/kptydevice.moc:55
#30 KPtyDevice::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90_build/kpty/kptydevice.moc:48
#31 0x00007f62d0603e51 in QMetaObject::activate (sender=0xd63fc0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff520d2680) at kernel/qobject.cpp:3547
#32 0x00007f62d0650ece in QSocketNotifier::activated (this=<optimized out>, _t1=22) at .moc/release-shared/moc_qsocketnotifier.cpp:103
#33 0x00007f62d060d1db in QSocketNotifier::event (this=0xd63fc0, e=0x7fff520d2cf0) at kernel/qsocketnotifier.cpp:317
#34 0x00007f62cf785a24 in notify_helper (e=0x7fff520d2cf0, receiver=0xd63fc0, this=0x7fdbc0) at kernel/qapplication.cpp:4551
#35 QApplicationPrivate::notify_helper (this=0x7fdbc0, receiver=0xd63fc0, e=0x7fff520d2cf0) at kernel/qapplication.cpp:4523
#36 0x00007f62cf78a7f3 in QApplication::notify (this=0x7fff520d2fa0, receiver=0xd63fc0, e=0x7fff520d2cf0) at kernel/qapplication.cpp:4412
#37 0x00007f62d13c3586 in KApplication::notify (this=0x7fff520d2fa0, receiver=0xd63fc0, event=0x7fff520d2cf0) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90/kdeui/kernel/kapplication.cpp:311
#38 0x00007f62d05f005c in QCoreApplication::notifyInternal (this=0x7fff520d2fa0, receiver=0xd63fc0, event=0x7fff520d2cf0) at kernel/qcoreapplication.cpp:915
#39 0x00007f62d061e647 in sendEvent (event=0x7fff520d2cf0, receiver=<optimized out>) at kernel/qcoreapplication.h:231
#40 socketNotifierSourceDispatch (source=0x8008f0) at kernel/qeventdispatcher_glib.cpp:110
#41 0x00007f62cbb62bbd in g_main_dispatch (context=0x800520) at gmain.c:2441
#42 g_main_context_dispatch (context=0x800520) at gmain.c:3011
#43 0x00007f62cbb633b8 in g_main_context_iterate (context=0x800520, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3089
#44 0x00007f62cbb63589 in g_main_context_iteration (context=0x800520, may_block=1) at gmain.c:3152
#45 0x00007f62d061efef in QEventDispatcherGlib::processEvents (this=0x7fc3a0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#46 0x00007f62cf82860e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#47 0x00007f62d05eeb92 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#48 0x00007f62d05eede7 in QEventLoop::exec (this=0x7fff520d2f30, flags=...) at kernel/qeventloop.cpp:204
#49 0x00007f62d05f3c05 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#50 0x00007f62bed2285a in kdemain (argc=1, argv=0x6a7bb0) at /var/tmp/portage/kde-base/konsole-4.8.90/work/konsole-4.8.90/src/main.cpp:85
#51 0x00000000004080c4 in launch (argc=1, _name=0x6a8708 "/usr/bin/konsole", args=<optimized out>, cwd=0x0, envc=<optimized out>, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x6a8734 "pinacolada;1339187496;943562;25266_TIME594813859") at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90/kinit/kinit.cpp:734
#52 0x00000000004091a6 in handle_launcher_request (sock=7, who=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90/kinit/kinit.cpp:1226
#53 0x00000000004096cf in handle_requests (waitForPid=0) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90/kinit/kinit.cpp:1419
#54 0x00000000004050ce in main (argc=2, argv=0x7fff520d3e20, envp=0x7fff520d40f0) at /var/tmp/portage/kde-base/kdelibs-4.8.90/work/kdelibs-4.8.90/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Jekyll Wu 2012-06-08 21:58:00 UTC
Thanks for reporing. 

The important condition for reproducing is run nano or mc in one tab, then d&d that tab (or just detach) . I will look into this crash since I added those code for web shortcuts at the first place :)
Comment 2 Jekyll Wu 2012-06-09 03:12:34 UTC
Git commit 4d3a22ccc91f82262a6d17e2ce95c35bdd02ad4f by Jekyll Wu.
Committed on 09/06/2012 at 05:02.
Pushed by jekyllwu into branch 'master'.

Use the controller instead of view as parent when creating submenu
FIXED-IN: 4.9.0

M  +2    -2    src/SessionController.cpp

http://commits.kde.org/konsole/4d3a22ccc91f82262a6d17e2ce95c35bdd02ad4f
Comment 3 Jekyll Wu 2012-07-28 20:02:28 UTC
*** Bug 304205 has been marked as a duplicate of this bug. ***