Use the controller instead of view as parent when creating submenu

BUG: 301476
FIXED-IN: 4.9.0